--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rebass/preset": "^4.0.5",
     "bootstrap": "^5.1.3",
+    "emotion-theming": "^11.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "rebass": "^4.0.7",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
