--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-media": "^1.10.0",
+    "react-responsive": "^9.0.0-beta.10",
     "rebass": "^4.0.7",
     "styled-components": "^5.3.5"
   },
