--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@rebass/preset": "^4.0.5",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "emotion-theming": "^11.0.0",
+    "mongodb": "^4.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
